# advent-of-code-rs

./: Cargo.toml  LICENSE-MIT  README-solve.tape  README.md  tarpaulin.toml
.github/workflows/: not_dependabot.yaml  validate.yaml  validate_history.yaml  validate_pr_commits.yaml
aoc/: Cargo.toml
aoc-benchmarks/: Cargo.toml
aoc-benchmarks/benches/: puzzles.rs
aoc-cli/: Cargo.toml
aoc-cli/src/: main.rs
aoc/src/: cli.rs  downloader.rs  fs.rs  ident.rs  leaderboard.rs  lib.rs  main.rs  parser.rs  puzzles.rs  runner.rs  solver.rs  ui.rs
aoc/src/ident/: day.rs  filter.rs  id.rs  mod.rs  part.rs  year.rs
aoc/src/leaderboard/: formatting.rs  min_med_max.rs  mod.rs  parsing.rs  rank.rs  score.rs  stats.rs  time.rs  totals.rs
aoc/src/parser/: direction.rs  grid.rs  point.rs  rect.rs  vec2.rs  vector.rs
aoc/src/puzzles/: mod.rs  y21d01.rs  y21d02.rs  y21d03.rs  y23d03.rs  y23d15.rs  y24d01.rs  y24d02.rs  y24d03.rs  y24d04.rs  y24d05.rs  y24d06.rs  y24d07.rs  y24d08.rs  y24d12.rs  y24d13.rs  y24d14.rs  y24d15.rs  y24d16.rs  y24d17.rs
api-2024/: Cargo.toml
api-2024/src/: lib.rs
test/empty/: .gitkeep
test/error/personal_leaderboard_statistics/: this_file_makes_tests_fail
test/personal_leaderboard_statistics/: y20_personal_leaderboard_statistics.txt  y21_personal_leaderboard_statistics.txt
test/personal_puzzle_inputs/: y21d02_personal_puzzle_input.txt  y21d14_personal_puzzle_input.txt  y21d15_personal_puzzle_input.txt  y21d16_personal_puzzle_input.txt
xtask/: Cargo.toml
xtask/src/: ci.rs  main.rs  version.rs
