[workspace]
members = [ "aoc", "xtask" ]
default-members = [ "aoc" ]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.3.21", features = ["derive"] }
# The MSRV pipeline uses Rust versions where `error_in_core` is not yet stable.
lazy_errors = { version = "0.8.0", default-features = false, features = ["std"] }
test-case = "3.1.0"
