[workspace]
members = [ "aoc", "aoc-benchmarks", "aoc-cli", "api-2024", "xtask" ]
default-members = [ "aoc-cli" ]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.3.21", features = ["derive"] }
# The MSRV pipeline uses Rust versions where `error_in_core` is not yet stable.
lazy_errors = { version = "0.9.0", default-features = false, features = ["std"] }
paste = "1.0.15"
test-case = "3.1.0"
tokio = { version = "1.30.0", features = ["macros", "rt-multi-thread", "sync"] }
