[workspace]
members = [ "aoc", "aoc-benchmarks", "aoc-cli", "api-2024", "xtask" ]
default-members = [ "aoc-cli" ]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.3.21", features = ["derive"] }
lazy_errors = "0.10.1"
paste = "1.0.15"
test-case = "3.1.0"
tokio = { version = "1.30.0", features = ["macros", "rt-multi-thread", "sync"] }
